consolidated logging configuration; small refactors here and there; configuration now uses static string references